# sphaira

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_release.sh
.github/: FUNDING.yml
.github/workflows/: build_presets.yml
assets/romfs/assoc/: 2048_libretro_libnx.ini  81_libretro_libnx.ini  DoubleCherryGB_libretro_libnx.ini  SwitchWave.ini  a5200_libretro_libnx.ini  ardens_libretro_libnx.ini  arduous_libretro_libnx.ini  atari800_libretro_libnx.ini  bk_libretro_libnx.ini  bluemsx_libretro_libnx.ini  boom3_libretro_libnx.ini  boom3_xp_libretro_libnx.ini  bsnes_hd_beta_libretro_libnx.ini  bsnes_libretro_libnx.ini  cannonball_libretro_libnx.ini  cap32_libretro_libnx.ini  chailove_libretro_libnx.ini  citra_libretro_libnx.ini  crocods_libretro_libnx.ini  desmume_libretro_libnx.ini  dinothawr_libretro_libnx.ini  dosbox_pure_libretro_libnx.ini  dosbox_svn_libretro_libnx.ini  easyrpg_libretro_libnx.ini  ecwolf_libretro_libnx.ini  fbalpha2012_cps1_libretro_libnx.ini  fbalpha2012_cps2_libretro_libnx.ini  fbalpha2012_libretro_libnx.ini  fbalpha2012_neogeo_libretro_libnx.ini  fbneo_libretro_libnx.ini  fceumm_libretro_libnx.ini  flycast_libretro_libnx.ini  fmsx_libretro_libnx.ini  freechaf_libretro_libnx.ini  freeintv_libretro_libnx.ini  frodo_libretro_libnx.ini  fuse_libretro_libnx.ini  gambatte_libretro_libnx.ini  gearboy_libretro_libnx.ini  gearcoleco_libretro_libnx.ini  (+98 more)
assets/romfs/github/: ftpsrv.json  sphaira.json  untitled.json
assets/romfs/i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pt.json  ru.json  se.json  uk.json  vi.json  zh.json
assets/romfs/themes/: abyss_theme.ini  base_black_theme.ini  base_white_theme.ini  black_theme.ini  black_theme_sp_icons.ini  default_theme.ini  oled_black_theme.ini  white_theme.ini
hbl/: CMakeLists.txt  hbl.json
hbl/source/: main.c
sphaira/: CMakeLists.txt
sphaira/include/: app.hpp  defines.hpp  download.hpp  dumper.hpp  evman.hpp  fs.hpp  ftpsrv_helper.hpp  hasher.hpp  haze_helper.hpp  i18n.hpp  image.hpp  location.hpp  log.hpp  minizip_helper.hpp  nro.hpp  nxlink.h  option.hpp  owo.hpp  swkbd.hpp  threaded_file_transfer.hpp  title_info.hpp  web.hpp  yyjson_helper.hpp
sphaira/include/ui/: bubbles.hpp  error_box.hpp  list.hpp  notification.hpp  nvg_util.hpp  object.hpp  option_box.hpp  option_list.hpp  popup_list.hpp  progress_box.hpp  scrollable_text.hpp  scrollbar.hpp  scrolling_text.hpp  sidebar.hpp  types.hpp  widget.hpp
sphaira/include/ui/menus/: appstore.hpp  file_viewer.hpp  filebrowser.hpp  ftp_menu.hpp  game_menu.hpp  gc_menu.hpp  ghdl.hpp  grid_menu_base.hpp  homebrew.hpp  install_stream_menu_base.hpp  irs_menu.hpp  main_menu.hpp  menu_base.hpp  mtp_menu.hpp  save_menu.hpp  themezer.hpp  usb_menu.hpp
sphaira/include/usb/: base.hpp  tinfoil.hpp  usb_uploader.hpp  usbds.hpp  usbhs.hpp
sphaira/include/yati/: yati.hpp
sphaira/include/yati/container/: base.hpp  nsp.hpp  xci.hpp
sphaira/include/yati/nx/: crypto.hpp  es.hpp  keys.hpp  nca.hpp  ncm.hpp  ncz.hpp  npdm.hpp  ns.hpp  nxdumptool_rsa.h  tik.h
sphaira/include/yati/source/: base.hpp  file.hpp  stdio.hpp  stream.hpp  stream_file.hpp  usb.hpp
sphaira/source/: app.cpp  download.cpp  dumper.cpp  evman.cpp  fs.cpp  ftpsrv_helper.cpp  hasher.cpp  haze_helper.cpp  i18n.cpp  image.cpp  location.cpp  log.cpp  main.cpp  minizip_helper.cpp  nro.cpp  nxlink.cpp  option.cpp  owo.cpp  swkbd.cpp  threaded_file_transfer.cpp  title_info.cpp  web.cpp
sphaira/source/ui/: bubbles.cpp  error_box.cpp  list.cpp  notification.cpp  nvg_util.cpp  option_box.cpp  option_list.cpp  popup_list.cpp  progress_box.cpp  scrollable_text.cpp  scrollbar.cpp  scrolling_text.cpp  sidebar.cpp  widget.cpp
sphaira/source/ui/menus/: appstore.cpp  file_viewer.cpp  filebrowser.cpp  ftp_menu.cpp  game_menu.cpp  gc_menu.cpp  ghdl.cpp  grid_menu_base.cpp  homebrew.cpp  install_stream_menu_base.cpp  irs_menu.cpp  main_menu.cpp  menu_base.cpp  mtp_menu.cpp  save_menu.cpp  themezer.cpp  usb_menu.cpp
sphaira/source/usb/: base.cpp  usb_uploader.cpp  usbds.cpp  usbhs.cpp
sphaira/source/yati/: yati.cpp
sphaira/source/yati/container/: nsp.cpp  xci.cpp
sphaira/source/yati/nx/: es.cpp  keys.cpp  nca.cpp  ncm.cpp  ns.cpp  nxdumptool_rsa.c
sphaira/source/yati/source/: file.cpp  stdio.cpp  stream.cpp  stream_file.cpp  usb.cpp
tools/: usb_install_pc.py  usb_total.py
